# Glycolamp

./: LICENSE  MIGRATION_SUMMARY.md  README.md  RUN_ANALYSIS.md  pyproject.toml
claudedocs/: CODE_ANALYSIS_REPORT.md  CODE_CLEANUP_REPORT.md  CODE_IMPROVEMENTS_SUMMARY.md  GLYCAN_FRAGMENTATION_WORKFLOW.md
docs/: BENCHMARKING_PROTOCOL.md  BENCHMARKING_TECHNICAL_REPORT.md  DATA_PREPARATION.md  DEVELOPMENT_ROADMAP.md  FRAGPIPE_COMPARISON.md  GLYCOPROTEOMICS_PIPELINE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE2_DATABASE_MODULES.md  PIPELINE_COMPLETION_SUMMARY.md  PIPELINE_QUICKSTART.md  VALIDATION_REPORT.md
examples/: README.md  example_01_raw_conversion.py  example_02_parse_spectra.py  example_03_database_search.py
scripts/: README.md  benchmark_glycolamp.py  generate_protein_glycan_matrix.py  validate_installation.py  validate_interactive_consistency.py
src/alcoa/: __init__.py  audit_logger.py  checksum_manager.py  compliance_validator.py  metadata_generator.py
src/chemoinformatics/: __init__.py  glycan_smiles.py  glycopeptide_smiles.py  peptide_smiles.py
src/converters/: __init__.py  mzml_parser.py  raw_converter.py
src/database/: __init__.py  candidate_generator.py  fasta_parser.py  glycan_database.py
src/scoring/: __init__.py  fdr_calculator.py  sp_scorer.py  spectrum_preprocessor.py  theoretical_spectrum.py  xcorr_scorer.py
tests/: test_chemoinformatics.py  test_database.py  test_database_integration.py  test_infrastructure.py
